handle null fields

--- a/private/emails/order-confirmation.html
+++ b/private/emails/order-confirmation.html
@@ -30,7 +30,9 @@
             <h3 style="padding-bottom:10px;color:#000000">User details</h3>
             <p style="margin:0 0 16px;color:#000000">Customer name:<br>{{name}}</p>
             <p style="margin:0 0 16px; color:#000000">Phone number:<br>{{phoneNumber}}</p>
+            {{#if email}}
             <p style="margin:0 0 16px;color:#000000">Email:<br>{{email}}</p>
+            {{/if}}
           </div>
       
           <div style="margin-top:40px;color:#000000;font-size:16px;font-weight:400">
