add vehicle type in email

--- a/private/emails/order-confirmation.html
+++ b/private/emails/order-confirmation.html
@@ -39,6 +39,8 @@
               {{/each}}
             </div>
             {{/if}}
+            <p style="margin:0 0 16px;color:#000000">Vehicle type:<br>
+              {{vehicleType}}</p>
       
             <table style="width:100%; border-collapse:collapse; font-size:16px; color:#000000">
               <thead>
