--- a/private/shopify/welcome_page.html
+++ b/private/shopify/welcome_page.html
@@ -8,23 +8,40 @@
 <body style="font-family: Arial; margin: 40px;">
   <h1>Welcome to Delivery Service App</h1>
 
-  <p>Your app is installed for: <strong><%= shop %></strong></p>
+  <h2> Please Enter the following data to get started</h2>
 
   <h3>Pickup / Sender Address Settings</h3>
 
   <form method="POST" action="/api/settings/save">
     <input type="hidden" name="shop" value="<%= shop %>" />
 
-    <label>Sender Name</label><br />
+    <label>Store Name</label><br />
     <input type="text" name="senderName" value="<%= senderName %>" /><br /><br />
-
-    <label>Pickup Address</label><br />
-    <input type="text" name="pickupAddress" value="<%= pickupAddress %>" /><br /><br />
-
-    <label>Phone Number</label><br />
+    
+    <label>Store Phone Number</label><br />
     <input type="text" name="phone" value="<%= phone %>" /><br /><br />
 
-    <button type="submit">Save Settings</button>
+    <label>Store Address</label><br />
+    <input type="text" name="pickupAddress" value="<%= pickupAddress %>" /><br /><br />
+
+    <label>Item Type</label>
+    <select name="itemType">
+      <% itemTypes.forEach(type => { %>
+        <option value="<%= type %>"><%= type.charAt(0).toUpperCase() + type.slice(1) %></option>
+      <% }) %>
+    </select>
+    <br /><br />
+
+    <label>Vehicle Type</label>
+    <select name="vehicleType">
+      <% vehicleTypes.forEach(v => { %>
+        <option value="<%= v %>"><%= v.charAt(0).toUpperCase() + v.slice(1) %></option>
+      <% }) %>
+    </select>
+    <br /><br />
+
+
+    <button type="submit">Save</button>
   </form>
 
   <br />
