--- a/private/shopify/welcome_page.html
+++ b/private/shopify/welcome_page.html
@@ -50,6 +50,11 @@
       align-items: center;
     }
 
+    .phone-wrapper input {
+      flex: 1;
+      margin-top: 15px;      /* remove extra top margin */
+    }
+
     .phone-prefix {
       padding: 10px 14px;
       background: #f0f0f0;
