fix endpoint in form

--- a/private/shopify/welcome_page.html
+++ b/private/shopify/welcome_page.html
@@ -76,7 +76,7 @@
 
   <h1>Delivery Service App Settings</h1>
 
-  <form method="POST" action="/api/settings/save">
+  <form method="POST" action="/api/shop-settings/save">
     <input type="hidden" name="shop" value="<%= shop %>" />
 
     <!-- Sender Name -->
